--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,5 +1,13 @@
+html,body {
+	height:100%;
+	margin :0;
+	padding: 0;
+}
+
 .container {
+	position: relative;
 	width: 1100px !important;
+	min-height:100%;
 }
 .clearBoth{
 	clear:both;
@@ -74,6 +82,7 @@
 	border-bottom: #efefef 2px solid;
 	padding-bottom: 5px;
 	margin-bottom: 20px;
+    position: relative;
 }
 
 #header-area h3 {
@@ -100,6 +109,23 @@
     padding: 8px 0px 25px 0px;
 }
 
+/*
+*	footer
+*/
+.footer-area {
+    position: relative;
+    width: 100%;
+    height: 91px;
+    padding: 10px;
+    background: #2d2929;
+    margin-top: 2em;
+}
+.footer-text {
+	margin-top: 16px;
+	font-size: 14px;
+	color: #eee;
+}
+
 /*         
 *   main.jsp (main page)
 */         
@@ -109,6 +135,7 @@
     margin: 0 auto;
     padding: 140px 0px;
     text-align: center;
+    position: relative;
 }
 
 #searchBox{
